<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="appName">Transport Mall Partner</string>
    <string name="googleMapsApiKey" translatable="false">AIzaSyDr5x9S74CXeXmex4fwVl24ChLOMIRyt5o</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="invalid_email">Please enter valid email</string>
    <string name="enter_password">Please enter password</string>
    <string name="invalid_password">Password length should be between 6 to 20 characters</string>
    <string name="ok">OK</string>
    <string name="home">Home</string>
    <string name="graph" translatable="false">Graph</string>
    <string name="alarm">Alarm</string>
    <string name="music">Music</string>
    <string name="version">Version</string>
    <string name="post_request">Post Request</string>
    <string name="server_taking_too_long_to_respond">Server is taking too long to respond OR something is wrong with your internet connection. Please try again later.</string>
    <string name="unable_to_connect">Unable to connect with server</string>
    <string name="please_wait">Please wait…</string>
    <string name="get_request">Get Request</string>
    <string name="db_retrieve">Get data from DB</string>
    <string name="delete_record_from_db">Delete record from DB</string>
    <string name="no_record_found">No record found</string>
    <string name="list_items">List Items</string>
    <string name="back">Back</string>
    <string-array name="home_tab_items_name">
        <item>@string/home</item>
        <item>@string/graph</item>
        <item>@string/alarm</item>
        <item>@string/music</item>
        <item>@string/version</item>
    </string-array>
    <string name="menu">Menu</string>
    <string name="choose_language" tools:ignore="MissingTranslation">Choose Language</string>
    <string name="english" translatable="false" tools:ignore="MissingTranslation">English</string>
    <string name="hindi" translatable="false" tools:ignore="MissingTranslation">हिंदी</string>
    <string name="punjabi" translatable="false" tools:ignore="ExtraTranslation,MissingTranslation">ਪੰਜਾਬੀ</string>
    <string name="email_cannot_be_empty">Email field cannot be empty</string>
    <string name="password_cannot_be_empty">Password field cannot be empty</string>
    <string name="pending">Pending</string>
    <string name="in_progress">In Progress</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="notifications">Notifications</string>
    <string name="hepline">Helpline</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="notifications_will_appear_here">Notifications will appear here</string>
    <string name="search_dhaba">Search Dhaba</string>
    <string name="dhaba_mnagement">Dhaba Management</string>
    <string name="add_new_dhaba">Add New Dhaba</string>
    <string name="view_dhaba">View Dhaba</string>
    <string name="go_to_home">Go To Home</string>
    <string name="food">Food</string>
    <string name="parking">Parking</string>
    <string name="sleeping">Sleeping</string>
    <string name="washroom_cleaning"><![CDATA[Washroom & Cleaning]]></string>
    <string name="security">Security</string>
    <string name="other">Other</string>
    <string name="dhaba_name">Dhaba Name *</string>
    <string name="dhaba_address">Dhaba address</string>
    <string name="fetch_location">Dhaba Location</string>
    <string name="landmark">Landmark</string>
    <string name="area">Area</string>
    <string name="pin_code">Pin code</string>
    <string name="food_license">Food Licence (Fssai)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="food_at_100_inr">Food at 100 INR</string>
    <string name="ro_clean_water">RO Clean Water</string>
    <string name="veg_food_non_veg">Veg Food | Non Veg</string>
    <string name="veg">Veg</string>
    <string name="non_veg">Non Veg</string>
    <string name="both">Both</string>
    <string name="upload_food_license_photo">Upload food license photo</string>
    <string name="upload_food_photos">Upload Food Photos</string>
    <string name="upload_parking_photos">Upload Parking Photos</string>
    <string name="concrete_parking">Concrete Parking</string>
    <string name="fully_fenced">Fully Fenced</string>
    <string name="open">Open</string>
    <string name="flat_hard_parking">Flat Hard Parking</string>
    <string name="kacha_flat_parking">Kacha Flat Parking</string>
    <string name="select_parking_space">Select Parking Space</string>
    <string name="_1_20">1–20</string>
    <string name="twenty_to_fifty">20–50</string>
    <string name="_50_100">50–100</string>
    <string name="above_100">Above 100</string>
    <string name="bed_charpai">Bed/Charpai</string>
    <string name="number_of_beds">Number of Beds</string>
    <string name="_1_2">1–2</string>
    <string name="_2_5">2–5</string>
    <string name="above_5">5+</string>
    <string name="upload_sleeping_amenities_photo">Upload Sleeping Amenities Photo</string>
    <string name="fan">Fan</string>
    <string name="cooler">Cooler</string>
    <string name="enclosed">Enclosed</string>
    <string name="hot_water_bag">Hot Water Bag</string>
    <string name="hot_and_cold_water">Hot and Cold Water</string>
    <string name="upload_washroom_photo">Upload Washroom Photos</string>
    <string name="day_guard">Day Guard</string>
    <string name="night_guard">Night Guard</string>
    <string name="police_verification">Police Verification</string>
    <string name="submit_police_verification_document">Submit Police Verification Document</string>
    <string name="mechanic_shop">Mechanic Shop</string>
    <string name="_24_x_7">24 x 7</string>
    <string name="day">Day</string>
    <string name="no_shop">No Shop</string>
    <string name="puncture_shop">Puncture Shop</string>
    <string name="daily_utility_shop">Daily Utility Shop</string>
    <string name="barber">Barber</string>
    <string name="in_premises">IN Premises</string>
    <string name="food_amen_title">Write Food Details</string>
    <string name="parking_amen_title">Write Parking Details</string>
    <string name="sleeping_amen_title">Write Sleeping Details</string>
    <string name="washroom_amen_title">Write Washroom Details</string>
    <string name="security_amen_title">Write Security Details</string>
    <string name="other_amen_title">Write Other Details</string>
    <string name="amen_title">Write Details</string>
    <string name="upload_dhaba_pictures">Add Dhaba hoarding  Picture</string>
    <string name="save_as_draft">Save as Draft</string>
    <string name="owner_name">Owner name *</string>
    <string name="phone_number">Phone number</string>
    <string name="email_address">Email address *</string>
    <string name="address">Address</string>
    <string name="pan_number">Pan Number</string>
    <string name="aadhar_card_number">Aadhar Card Number *</string>
    <string name="upload_owner_picture">Upload Owner Picture</string>
    <string name="upload_id_proof">Upload Id proof</string>
    <string name="we_accept_aadhar_card_pan_card_or_driving_license">We accept aadhar card, Voter ID or driving license</string>
    <string name="front_side">Front Side</string>
    <string name="back_side">Back Side</string>
    <string name="next">Next</string>
    <string name="update_profile">Update Profile</string>
    <string name="notifications_settings">Notifications Settings</string>
    <string name="clear_all">Clear All</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email_empty_validation">Email field cannot be empty</string>
    <string name="valid_email_validation">Please enter a valid Email Address</string>
    <string name="password_validation">Password field cannot be empty</string>
    <string name="truck_show_clean">Truck Show Clean</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="indoor_cameras">Indoor Cameras</string>
    <string name="outdoor_cameras">Outdoor Cameras</string>
    <string name="light">Light</string>
    <string name="tower_bright_light">Tower Bright Light</string>
    <string name="bulb_light">Bulb light</string>
    <string name="_24x7_back_up_of_electricity">24X7 Electricity Back up</string>
    <string name="search_city">Search City</string>
    <string name="city_name">City Name</string>
    <string name="continue_text">Continue</string>
    <string name="city">City</string>
    <string name="loading_cities">Loading Cities..</string>
    <string name="_1_200_m">1–200 M</string>
    <string name="_200_400_m">200–400 M</string>
    <string name="offers">Offers</string>
    <string name="discount">Discount (%)</string>
    <string name="offer_start_date">Offer Start Date</string>
    <string name="offer_end_date">Offer End Date</string>
    <string name="onboarded_by">Onboarded By</string>
    <string name="name">Name</string>
    <string name="onboarding_date">Onboarding Date</string>
    <string name="sales_executive">Sales Executive</string>
    <string name="area_head">Area Head</string>
    <string name="head">Head</string>
    <string name="bank_details">Bank Details</string>
    <string name="bank">Bank</string>
    <string name="gst_number">GST Number</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="upload_pan_photo">Upload Pan Photo</string>
    <string name="blocking_system_for">Blocking System For</string>
    <string name="choose_months">Choose Months</string>
    <string-array name="property_status">
        <item>Owner</item>
        <item>Rented</item>
        <item>Lease</item>
        <item>Other</item>
    </string-array>
    <string name="_15_days">15 Days</string>
    <string name="month">Month</string>
    <string name="delisted">Delisted</string>
    <string name="mechanic_shop_day">Mechanic Shop Day</string>
    <string name="puncture_shop_day">Puncture Shop Day</string>
    <string name="daily_utility_shop_day">Daily Utility Shop Day</string>
    <string name="profile">Profile</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="helpline">Helpline</string>
    <string name="or">OR</string>
    <string name="chat">Chat</string>
    <string name="request_for_call">Request for Call</string>
    <string name="upload_dhaba_video">Upload Dhaba Video</string>
    <string name="highway_number">National Highway Number</string>
    <string name="loading_cities_states">Loading Cities and States..</string>
    <string name="save">Save</string>
    <string name="enter_your_phone_number_where_we_can_call_you">Enter your phone number where we can call you</string>
    <string name="call_me_now">Call Me</string>
    <string name="dhaba_details">Dhaba Details</string>
    <string name="owner_details">Owner Details</string>
    <string name="amenities">Amenities</string>
    <string name="save_dhaba">Save Dhaba</string>
    <string name="dhaba_created_successfully">Dhaba details saved successfully</string>
    <string name="food_amen_saved">Food Amenities Saved Successfully</string>
    <string name="no_data_found">No Data Found</string>
    <string name="copied_to_clipboard">Dhaba ID Copied to clipboard</string>
    <string name="no_cities_found">Please enter valid city name</string>
    <string name="add_highway">Add this highway</string>
    <string name="dhaba_added_succesfully">Dhaba Added Succesfully</string>
    <string name="this_is_the_id_number_of_added_dhaba">This is the id number of added dhaba.</string>
    <string name="basic_details">Basic Details</string>
</resources>