<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="com.transport.mall.R" />

        <import type="android.view.View" />

        <variable
            name="dhabaId"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_round_corners"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="@dimen/_20sdp">

        <ImageView
            android:id="@+id/ivTick"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/ic_verified" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/dhaba_added_succesfully" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDhabaId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@color/light_red"
            android:padding="10dp"
            android:text="@{dhabaId}" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/this_is_the_id_number_of_added_dhaba" />

        <Button
            android:id="@+id/btnViewDhaba"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/btn_primary_no_corners"
            android:text="@string/view_dhaba"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnGoHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/default_btn_selector"
            android:text="@string/go_to_home"
            android:textAllCaps="false"
            android:textColor="@color/black" />

    </LinearLayout>
</layout>