<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.transport.mall.R" />

        <import type="android.view.View" />

        <variable
            name="context"
            type="android.content.Context" />

        <variable
            name="isHavingData"
            type="Boolean" />

        <variable
            name="isHighwaySelection"
            type="Boolean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_stroke"
            android:fontFamily="@font/opensans_regular"
            android:hint="@string/search_city"
            android:inputType="text"
            android:maxLength="15"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="@dimen/_30sdp"
            android:visibility="@{isHavingData ? View.GONE : View.VISIBLE}">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNoData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_semibold"
                android:gravity="center"
                android:text="@string/no_cities_found"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAddNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/stroke_btn_selector"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_20sdp"
                android:paddingVertical="@dimen/_5sdp"
                android:text="@string/add_highway"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:visibility="@{isHighwaySelection ? View.VISIBLE : View.GONE}"
                tools:text="@string/add_highway" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/primary_color_btn_selector"
            android:fontFamily="@font/opensans_bold"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/continue_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            android:visibility="@{isHavingData ? View.VISIBLE : View.GONE}" />

    </LinearLayout>

</layout>